apps/podinfo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 9898
  selector:
    app: podinfo
